Fix bg color and overflow for .highlight blocks
Thanks to @olleolleolle for the suggestion!
https://github.com/capistrano/capistrano/pull/1768#issuecomment-277459234

--- a/docs/css/monokai.css
+++ b/docs/css/monokai.css
@@ -1,10 +1,17 @@
 // A modified version of https://raw.githubusercontent.com/richleland/pygments-css/master/monokai.css
 
+.highlighter-rouge {
+    background-color: #272822;
+}
+
 .highlight {
-	background: #272822;
-	padding: 1em;
-	font-size: 0.9em;
-	overflow: auto;
+    background: #272822;
+    padding: 1em;
+    font-size: 0.9em;
+    overflow: auto;
+    line-height: 150%;
+    overflow-y: auto;
+    overflow-x: scroll;
 }
 
 .highlight code {
